event processing optimized with arrays and int ids. Improving Single Handler Events Manager. Changed to PS.